Marker popup fixes
If the title has 2 lines, the button gets pushed too low. Make it scalable.
If there is no rating, it says undefined. It should be user friendly, not JSGuru firendly

Refactored raw JS into jQuery

Forgot a var keyword

Added nowrap for div lines to fix the button push down

Transformed double quotes into single quotes. Refactored the popup creation. Bugfix, DOM element instead of jQuery element

--- a/web/stylesheets/map.css
+++ b/web/stylesheets/map.css
@@ -42,6 +42,10 @@ body {
   height: 100%;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .nopadding {
   padding: 0;
 }
